--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -140,6 +140,8 @@ $zindex-adm-categories-item-active: 10
   td
     &:last-of-type
       padding-right: 0
+    &[role]
+      cursor: pointer
   thead
     td
       padding: 12px 20px 12px 0
