--- a/app/stylesheets/sass/modules/_adm-order.sass
+++ b/app/stylesheets/sass/modules/_adm-order.sass
@@ -165,3 +165,8 @@
       padding-right: 10px
       white-space: nowrap
       content: (attr(data-title))
+
+  .adm-order-footer
+    .modal &
+      position: static
+      padding: $modal-inner-padding
