--- a/app/stylesheets/sass/modules/_modal.sass
+++ b/app/stylesheets/sass/modules/_modal.sass
@@ -17,15 +17,10 @@
   margin: 0
   font-size: 28px
 
-.modal-order
-  .modal-dialog
+.modal-lg
+  &.modal-dialog
     margin-bottom: 100px
   .modal-header
     padding:
       top: $grid-gutter-width/2
       bottom: $grid-gutter-width/2
-
-@media (min-width: $screen-md-min)
-  .modal-order
-    .modal-dialog
-      width: 804px
