--- a/app/stylesheets/sass/settings/_forms.sass
+++ b/app/stylesheets/sass/settings/_forms.sass
@@ -12,7 +12,7 @@ $plain-input-text-color: #000
   position: relative
 
 %plain-input-padding
-  padding: 
+  padding:
     left: $plain-input-padding
     right: $plain-input-padding
 
@@ -180,7 +180,7 @@ input[type="radio"]
       margin-right: 10px
       & + .radio-content
         color: $text-color-light
-    
+
     &:checked
       & + span
         @extend .fa
@@ -236,3 +236,6 @@ input[type="search"]
   border-radius: $border-radius-base
   margin:
     bottom: $grid-gutter-width
+
+.form-control-text-large
+  font-size: 24px !important
