--- a/app/adm-orders-list.haml
+++ b/app/adm-orders-list.haml
@@ -47,9 +47,9 @@
                 - for order of orders
                   - order = orders[order]
                   %tr.adm-orders-table-row
-                    %td.adm-orders-table-cell.__cover{data: {title: "Товары"}, role: 'orders-list__table-modal-btn'}
+                    %td.adm-orders-table-cell.__cover{data: {title: "Товары"}, role: 'modal-order-toggle'}
                       %img{:src => "#{order.cover.src}", :alt => "#{order.cover.src}"}
-                    %td.adm-orders-table-cell.__desc{role: 'orders-list__table-modal-btn'}>
+                    %td.adm-orders-table-cell.__desc{role: 'modal-order-toggle'}>
                       - counter_products = 0
                       - for product of order.products
                         - product = order.products[product]
@@ -58,10 +58,10 @@
                           = product.title
                         - else
                           = product.title + ', '
-                    %td.adm-orders-table-cell.__number{data: {title: "Номер заказа"}, role: 'orders-list__table-modal-btn'}>= order.number
-                    %td.adm-orders-table-cell.__location{data: {title: "Место доставки"}, role: 'orders-list__table-modal-btn'}>= order.location
-                    %td.adm-orders-table-cell.__time{data: {title: "Время доставки"}, role: 'orders-list__table-modal-btn'}>= order.time
-                    %td.adm-orders-table-cell.__total{data: {title: "Сумма"}, role: 'orders-list__table-modal-btn'}>
+                    %td.adm-orders-table-cell.__number{data: {title: "Номер заказа"}, role: 'modal-order-toggle'}>= order.number
+                    %td.adm-orders-table-cell.__location{data: {title: "Место доставки"}, role: 'modal-order-toggle'}>= order.location
+                    %td.adm-orders-table-cell.__time{data: {title: "Время доставки"}, role: 'modal-order-toggle'}>= order.time
+                    %td.adm-orders-table-cell.__total{data: {title: "Сумма"}, role: 'modal-order-toggle'}>
                       %span.nobr<= order.total + ' руб.'
                     %td.adm-orders-table-cell.__payment{data: {title: "Состояние по оплате"}}
                       %span.label.label-default>
@@ -92,144 +92,9 @@
     / end Layout
 
     / Modal Order
-    .modal.modal-order.fade{"aria-hidden" => "true", "aria-labelledby" => "mySmallModalLabel", :role => "order-modal", :tabindex => "-1"}
-      .modal-dialog
+    .modal.modal-order.fade{"aria-hidden" => "true", "aria-labelledby" => "mySmallModalLabel", :role => "modal-order", :tabindex => "-1"}
+      .modal-dialog.modal-lg
         .modal-content{role: 'modal-content'}
-          .modal-body
-            / Order
-            .adm-order
-              %form.adm-form-default{:action => "?"}
-                / Order Header
-                %header.adm-order-header
-                  .row
-                    .col-md-4
-                      %h1.adm-order-header-title Заказ 0023
-                    .col-md-8
-                      .adm-order-status-info
-                        %span.adm-order-status-info-time> Заказ создан &mdash; 11:04, 25 сентября
-                        %span.label.label-success> Оплачен
-                        .dropdown.inline-dropdown
-                          %a.label.label-success{href: '#', data: {toggle: 'dropdown'}}
-                            На доставке
-                            %i.fa.fa-angle-down
-                          %ul.adm-dropdown-menu-status
-                            - for order of order_states
-                              - order = order_states[order]
-                              %li.adm-dropdown-menu-status-item
-                                %a.adm-dropdown-menu-status-btn{class: "__#{order.slug}"}
-                                  = "#{order.title}"
-                / end Order Header
-                / Order Body
-                %section.adm-order-body
-                  %ol.adm-order-sections
-                    %li.adm-order-section
-                      .adm-order-section-header
-                        .adm-order-section-number 1
-                        %h2.adm-order-section-title Покупатель
-                      .form-group
-                        .row
-                          .col-sm-5
-                            .form-group
-                              %label
-                                Имя
-                              %p
-                                Евгений
-                          .col-sm-5
-                            .form-group
-                              %label
-                                Емейл
-                              %p
-                                genue.luben@gmail.com
-                          .col-sm-5
-                            .form-group
-                              %label
-                                Телефон
-                              %p
-                                = '+7 (905) 716-14-51'
-                    %li.adm-order-section
-                      .adm-order-section-header
-                        .adm-order-section-number 2
-                        %h2.adm-order-section-title Доставка
-                        /
-                          .adm-btn-edit-order-section{title: 'Редактировать'}
-                            %span
-                              Редактировать
-                      .form-group
-                        .row
-                          .col-sm-5
-                            .form-group
-                              %label
-                                Город
-                              %p
-                                Санкт-Петербург
-                          .col-sm-5
-                            .form-group
-                              %label
-                                Адрес
-                              %p
-                                ул. Академика Янгеля, дом 5, корпус 25, квартира 12, домофон 356
-                        .row
-                          .col-sm-5
-                            .form-group
-                              %label
-                                Доставка
-                              %p
-                                Курьером
-                          .col-sm-5
-                            .form-group
-                              %label
-                                Комментарий к заказу
-                              %p
-                                Доставка послезавтра!
-                    %li.adm-order-section
-                      .adm-order-section-header
-                        .adm-order-section-number 3
-                        %h2.adm-order-section-title Оплата
-                      .form-group
-                        .row
-                          .col-sm-5
-                            .form-group
-                              %label
-                                Способ оплаты
-                              %p
-                                Банковские карты
-                    %li.adm-order-section
-                      .adm-order-section-header
-                        .adm-order-section-number 4
-                        %h2.adm-order-section-title Состав заказа
-                      .row
-                        .col-md-11
-                          %table.adm-order-goods-table
-                            %tbody
-                              %tr.adm-order-goods-table-row
-                                %td.adm-order-goods-table-cell.__cover{data: {title: "Товар"}}
-                                  %a{:href => "#product", :title => 'Мыльница с якорем'}
-                                    %img{:src => "assets/product-60x60-1.jpg", :alt => ""}
-                                %td.adm-order-goods-table-cell.__desc
-                                  %h4
-                                    %a{:href => "#product", :title => 'Мыльница с якорем'} Мыльница с якорем
-                                  %p
-                                    Размер: 16
-                                    %br
-                                    Артикул: 5643454
-                                %td.adm-order-goods-table-cell.__quantity{data: {title: "Количество"}}
-                                  %span.nobr Количество: 2
-                                %td.adm-order-goods-table-cell.__total{data: {title: "Сумма"}}
-                                  %span.nobr 12 000 руб.
-                            %tfoot
-                              %tr.adm-order-goods-table-row
-                                %td.adm-order-goods-table-cell{colspan: 3} &nbsp;
-                                %td.adm-order-goods-table-cell{colspan: 2}
-                                  %p
-                                    != 'Итого <br />'
-                                    12 000 руб.
-                / end Order Body
-                / Order Footer
-                %footer.adm-order-footer
-                  %button.adm-btn-remove-order.pull-right
-                    Удалить товар навсегда
-                / end Order Footer
-            / end Order
     / end Modal Order
 
     / Popup Products
