--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -138,6 +138,8 @@ $modal-backdrop-opacity: .8
 
 $modal-header-border-color: $gray-lightest
 
+$modal-lg: 804px;
+
 // Label
 $label-default-bg: $brand-default
 $label-success-bg: $brand-success
