--- a/app/stylesheets/sass/modules/_adm-sidebar-nav.sass
+++ b/app/stylesheets/sass/modules/_adm-sidebar-nav.sass
@@ -3,6 +3,7 @@ $left-sidebar-padding-top: 40px
 
 
 .adm-sidebar-nav
+  padding-top: 8px
   color: #fff
 
 .adm-sidebar-nav-list
@@ -18,7 +19,7 @@ $left-sidebar-padding-top: 40px
 
 .adm-sidebar-nav-link
   @include text-overflow
-  padding: 20px
+  padding: 12px 20px
   display: block
   color: inherit
   +transition(background-color .3s ease, color .3s ease)
@@ -27,7 +28,7 @@ $left-sidebar-padding-top: 40px
     color: inherit
 
 .adm-sidebar-nav-sep
-  margin: 0 20px -1px
+  margin: 8px 20px
   height: 1px
   background-color: #4d5257
   font-size: 0
