--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -61,7 +61,8 @@ $navbar-background-color: #fff
 $block-padding: 20px
 
 // Z-index List
-$zindex-popup: 1000
+$zindex-popup: 1000 // для popup-roducts (TODO: избавиться, т.к. не используется)
+$zindex-adm-dropdown-popup: 1000 !default;
 
 // Navbar
 $navbar-height:                    72px
@@ -146,6 +147,26 @@ $label-success-bg: $brand-success
 $label-warning-bg: $brand-warning
 $label-waiting-bg: $brand-waiting
 
+// Dropdown
+$amd-dropdown-popup-width: 220px
+
+$adm-dropdown-popup-bg: #4a4f55 !default;
+
+$amd-dropdown-popup-border-radius: 4px
+
+$amd-dropdown-popup-link-color: #fff !default;
+
+$adm-dropdown-popup-link-hover-color: $amd-dropdown-popup-link-color !default;
+$adm-dropdown-popup-link-hover-bg: #767a7f !default;
+
+$adm-dropdown-popup-link-active-color: $adm-dropdown-popup-link-hover-color !default;
+$adm-dropdown-popup-link-active-bg: $adm-dropdown-popup-link-hover-bg !default;
+
+$adm-dropdown-popup-link-disabled-color: $gray-light !default;
+
+$adm-dropdown-popup-arrow-size: 7px
+
+$adm-dropdown-popup-arrow-color: $adm-dropdown-popup-bg !default;
 
 // Типографика
 // h1 - 28px
