--- a/app/stylesheets/sass/modules/_adm-dropdown.sass
+++ b/app/stylesheets/sass/modules/_adm-dropdown.sass
@@ -33,3 +33,89 @@
   & > li
     padding: 0
     margin: 0
+
+
+// Main Dropdown
+.adm-dropdown
+  @include inline-valign-middle
+  position: relative
+  &.open
+    .adm-dropdown-popup
+      display: block
+
+.adm-dropdown-popup
+  width: $amd-dropdown-popup-width
+  padding:
+    top: 10px
+    bottom: 10px
+  position: absolute
+  display: none
+  float: left
+  top: 100%
+  left: 0
+  background-color: $adm-dropdown-popup-bg
+  background-clip: padding-box
+  z-index: $zindex-adm-dropdown-popup
+  border-radius: $amd-dropdown-popup-border-radius
+  &:before
+    content: ""
+    position: absolute
+    width: 0
+    height: 0
+  // Popup display to the right of dropdown toggle
+  &.__right
+    margin:
+      top: -4px
+      left: 20px
+    top: 0
+    left: 100%
+    &:before
+      top: 12px
+      right: 100%
+      border-top: $adm-dropdown-popup-arrow-size solid transparent
+      border-right: $adm-dropdown-popup-arrow-size solid $adm-dropdown-popup-arrow-color
+      border-bottom: $adm-dropdown-popup-arrow-size solid transparent
+
+.adm-dropdown-popup-list
+  @include list-style-none
+
+.adm-dropdown-popup-item
+
+.adm-dropdown-popup-link
+  padding: 10px 18px
+  display: block
+  color: $amd-dropdown-popup-link-color
+  +transition(background-color .3s ease, color .3s ease)
+  &:hover,
+  &:focus
+    background-color: $adm-dropdown-popup-link-hover-bg
+    color: $adm-dropdown-popup-link-hover-color
+  &:active,
+  .adm-dropdown-popup-item.__active &
+    background-color: $adm-dropdown-popup-link-active-bg
+    color: $adm-dropdown-popup-link-active-color
+
+  .adm-dropdown-popup-item.__disabled &
+    background-color: transparent
+    color: $adm-dropdown-popup-link-disabled-color
+    cursor: default
+
+// TODO: Сделать перенести логику на js и в зависимости от размера экрана
+// переключать класс __top, __right, __bottom, __left (нужно описать классы, кроме __right)
+@media screen and (max-width: $screen-xs-max)
+  .adm-dropdown-popup
+    margin:
+      top: 20px !important
+      left: -($amd-dropdown-popup-width/2) !important
+    top: 100% !important
+    left: 50% !important
+    &:before
+      margin-left: -$adm-dropdown-popup-arrow-size
+      top: auto !important
+      right: auto !important
+      left: 50% !important
+      bottom: 100% !important
+      border-top: none !important
+      border-right: $adm-dropdown-popup-arrow-size solid transparent !important
+      border-bottom: $adm-dropdown-popup-arrow-size solid $adm-dropdown-popup-arrow-color !important
+      border-left: $adm-dropdown-popup-arrow-size solid transparent !important
