--- a/app/stylesheets/sass/modules/_buttons.sass
+++ b/app/stylesheets/sass/modules/_buttons.sass
@@ -252,3 +252,31 @@
     background-color: lighten($green, 4%)
     border-color: lighten($green, 4%)
     color: #fff
+
+.adm-btn-categories-settings
+  @extend .btn
+  width: 30px
+  height: 30px
+  padding: 0
+  position: relative
+  border: 1px solid $line-color
+  background: none
+  &:hover
+    border-color: darken($line-color, 8%)
+
+.adm-btn-categories-settings-icon
+  width: 22px
+  height: 22px
+  margin:
+    top: -11px
+    left: -11px
+  display: inline-block
+  position: absolute
+  top: 50%
+  left: 50%
+  background:
+    repeat: no-repeat
+    position: center
+    size: cover
+    image: url('#{$images-path}/adm-icon-cogwheel-gray.png')
+  vertical-align: top
