--- a/app/index.haml
+++ b/app/index.haml
@@ -1,8 +1,8 @@
 !!! 5
 %html
   %head
-    @@include('./shared/_head.haml')
-  %body{style}
+    +include './app/shared/_head.haml'
+  %body
     .container
       %a.login__navbar-logo{href: 'index.html'}
       %hr
